--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.8.5",
@@ -11,7 +13,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "bootstrap": "^5.0.2",
+    "jest-fetch-mock": "^3.0.3",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
@@ -31,7 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -54,5 +58,14 @@
   },
   "devDependencies": {
     "redux-mock-store": "^1.5.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss)$": "babel-jest"
+    },
+    "automock": false,
+    "setupFiles": [
+      "./src/tests/setupJest.js"
+    ]
   }
 }
