--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -13,9 +13,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ./client/
+
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [14.x, 16.x]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,6 +28,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm i
+      - run: npm install
       - run: npm test
       - run: npm run build
