--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+          cache-dependency-path: "./client/package-lock.json"
       - run: npm install
       - run: npm test
       - run: npm run build
