--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -29,6 +29,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
           cache-dependency-path: "./client/package-lock.json"
-      - run: npm install
+      - run: npm ci
       - run: npm test
       - run: npm run build
