--- a/client/.babelrc
+++ b/client/.babelrc
@@ -10,6 +10,8 @@
         ],
         "only": [
           "./**/*.js",
+          "./**/*.ts",
+          "./**/**/*.tsx",
           "node_modules/jest-runtime"
         ]
       }
