--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,10 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
+    "@types/react": "^17.0.50",
+    "@types/react-dom": "^18.0.6",
     "axios": "^0.21.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "bootstrap": "^5.0.2",
@@ -30,6 +34,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "typescript": "^4.8.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -57,6 +62,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datetime-picker": "^3.4.1",
+    "@types/react-router-dom": "^5.3.3",
     "redux-mock-store": "^1.5.4"
   },
   "jest": {
